--- a/.github/workflows/rss_generator.yml
+++ b/.github/workflows/rss_generator.yml
@@ -2,7 +2,7 @@ name: Generate RSS Feeds
 
 on:
   schedule:
-    - cron: "0 */6 * * *" # Executa a cada 6 horas
+    - cron: "0 3 * * *" # Roda todos os dias às 3:00 AM UTC (meia-noite de Brasília)
   workflow_dispatch: # Permite execução manual
 
 jobs:
