--- a/config/sources_config.json
+++ b/config/sources_config.json
@@ -153,7 +153,13 @@
       "feed_file": "andre_derviche_feed.xml",
       "history_file": "andre_derviche_history.json",
       "scraper": "LinkedInNewsletterScraper"
+    },
+    {
+      "name": "Flávio Moreira",
+      "url": "https://www.linkedin.com/newsletters/7082534632725823488/",
+      "feed_file": "flavio_moreira_feed.xml",
+      "history_file": "flavio_moreira_history.json",
+      "scraper": "LinkedInNewsletterScraper"
     }
-
   ]
 }
